# KappaDBMS

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  STYLE-GUIDE.md  build.bat
src/: ClassToTestCodeCoverage.h  main.cpp
src/backend/: main.cpp
src/backend/driver/: CMakeLists.txt  driver.cpp  driver.hpp  table.cpp  table.hpp
src/backend/driver/datatypes/: Field.hpp  Record.hpp  Table.cpp  Table.hpp
src/backend/driver/datatypes/tables/: Table.cpp  Table.h
src/backend/include/: protocol.hpp  server.hpp
src/backend/parser/: .gitignore  CMakeLists.txt  dbStub.cpp  dbStub.h  parser.cpp  parser.h  parser.hpp  sql.hpp  test.cpp
src/backend/parser/flex-bison/: Makefile  bison_sql.cpp  bison_sql.h  bison_sql.output  bison_sql.ypp  flex_sql.cpp  flex_sql.h  flex_sql.hpp  flex_sql.lpp
src/backend/parser/sql-stmt/: BuildTable.cpp  BuildTable.hpp  Column.hpp  ColumnDefinition.hpp  CreateIndex.hpp  CreateTable.hpp  CreateView.hpp  Delete.hpp  DropIndex.hpp  DropScheme.hpp  DropTable.hpp  DropTrigger.hpp  DropView.hpp  Expression.cpp  Expression.h  Expression.hpp  ImportStatements.hpp  Insert.hpp  Instruction.hpp  Literal.cpp  Literal.hpp  Operation.hpp  Rollback.hpp  Select.hpp  ShowCreateTable.hpp  Table.cpp  Table.h  TableDefinition.hpp  Update.hpp  include_instructions.hpp
src/backend/parser/sql-stmt/NotImplemented/: Begin.hpp  CreateTrigger.hpp  DropTrigger.hpp  ShowCreateIndex.hpp
src/backend/server/: server.cpp  server.hpp
src/backend/storage/: .gitignore  BlockManager.cpp  BlockManager.h  BlockManager.hpp  CMakeLists.txt  StorageEngine.cpp  StorageEngine.h  StorageEngine.hpp
src/backend/storage/datatypes/: MemoryBlock.cpp  MemoryBlock.h  MetaData.cpp  MetaData.h  MetaData.hpp  Row.h  object.cpp  object.h
src/backend/storage/tables/: Field.h  Record.h  Table.cpp  Table.h
src/driver/: CMakeLists.txt  DriverBase.hpp  driver.cpp  driver.hpp
src/driver/datatypes/: Field.cpp  Field.hpp  Record.cpp  Record.hpp  Table.cpp  Table.hpp
src/frontend/: .gitignore  manage.py  redis.conf  requirements.txt  run.bat
src/frontend/backend/: __init__.py  celery.py  celeryconfig.py.txt  settings.py  tasks.py  urls.py  views.py  wsgi.py
src/frontend/backend/api/: celery.py  tasks.py  views.py
src/frontend/backend/api/kira/: __init__.py
src/frontend/backend/kira/: __init__.py
src/frontend/kappaweb/: settings.py  urls.py
src/frontend/public/: adminer.scss  app.html  index.html  index.js
src/frontend/public/assets/css/: adminer.css  adminer.css.map  app.css  app.css.map  app.scss
src/frontend/public/assets/js/: components.js  index.js  main.js
src/frontend/public/components/: sqltable.html
src/frontend/public/static/: adminer.min.css  index.html  index.js
src/frontend/run/: run.bat
src/include/: protocol.hpp
src/parser/: .gitignore  CMakeLists.txt  parser.cpp  parser.hpp  sql.hpp
src/parser/flex-bison/: Makefile  bison_sql.cpp  bison_sql.hpp  bison_sql.output  bison_sql.ypp  flex_sql.cpp  flex_sql.hpp  flex_sql.lpp
src/parser/sql-stmt/: Column.hpp  ColumnDefinition.hpp  CreateTable.hpp  Delete.hpp  DropTable.hpp  Expression.hpp  Insert.hpp  Instruction.hpp  Literal.hpp  Operation.hpp  Select.hpp  ShowCreateTable.hpp  TableDefinition.hpp  TransactionStmt.hpp  Update.hpp
src/parser/sql-stmt/NotImplemented/: Commit.hpp
src/server/: server.cpp  server.hpp
src/storage/: .gitignore  BlockManager.cpp  BlockManager.hpp  CMakeLists.txt  StorageEngine.cpp  StorageEngine.h  StorageEngine.hpp  TransactionManager.cpp  TransactionManager.hpp
src/storage/datatypes/: BlockList.cpp  BlockList.hpp  MemoryBlock.cpp  MemoryBlock.hpp  MetaData.cpp  MetaData.hpp  RawData.cpp  RawData.hpp  object.cpp
src/storage/tables/: Field.h  Record.h  Table.cpp  Table.h
tests/: CMakeLists.txt  DriverTestsFixture.cpp  ParserTest.cpp  ParserTestsFixture.cpp  StorageEngineTest.cpp  StorageEngineTestsFixture.cpp
tests/driver_tests/: CMakeLists.txt  DriverTestsFixture.cpp
tests/parser_tests/: CMakeLists.txt  ParserTestsFixture.cpp
tests/playground/: DriverPG.cpp  DriverTest.cpp  ParserPG.cpp  ParserTest.cpp  StorageEnginePG.cpp  StorageEngineTest.cpp
tests/storage_tests/: CMakeLists.txt  StorageEngineTestsFixture.cpp
